Fix: Add missing 'Design & Management Fee' category to mobile estimate view

--- a/adminwonpro_mobile.html
+++ b/adminwonpro_mobile.html
@@ -7647,7 +7647,7 @@
         let asListItems = []; // A/S 관리 리스트 데이터
 
         const categories = [
-            { no: '01', name: '가설공사' }, { no: '02', name: '철거공사' }, { no: '03', name: '설비/방수공사' },
+            { no: '01', name: '가설공사' }, { no: '00', name: '설계 및 관리비' }, { no: '02', name: '철거공사' }, { no: '03', name: '설비/방수공사' },
             { no: '04', name: '확장/단열공사' }, { no: '05', name: '창호공사' }, { no: '06', name: '전기/조명공사' },
             { no: '07', name: '에어컨공사' }, { no: '08', name: '목공/도어공사' }, { no: '09', name: '필름공사' },
             { no: '10', name: '타일공사' }, { no: '11', name: '욕실공사' }, { no: '12', name: '도장공사' },
@@ -10764,7 +10764,7 @@
 
         // 카테고리 목록
         const SETTLEMENT_CATEGORIES = [
-            '가설공사', '철거공사', '설비/방수공사', '전기/조명공사', '에어컨공사',
+            '가설공사', '설계 및 관리비', '철거공사', '설비/방수공사', '전기/조명공사', '에어컨공사',
             '창호공사', '목공/도어공사', '타일공사', '욕실공사', '필름공사',
             '도장공사', '바닥재공사', '도배공사', '가구공사', '중문공사',
             '마감공사', '기타공사'
@@ -13864,6 +13864,7 @@
 
             const categoryMap = {
                 '가설공사': '01', '가설': '01',
+                '설계 및 관리비': '00', '설계': '00', '관리비': '00', '설계비': '00',
                 '철거공사': '02', '철거': '02',
                 '설비/방수공사': '03', '설비': '03', '방수': '03',
                 '확장/단열공사': '04', '확장': '04', '단열': '04',
