--- a/quote.html
+++ b/quote.html
@@ -592,7 +592,7 @@
         <p class="footer-tagline">기준으로 완성하는, 오래 가는 인테리어.</p>
         <div class="footer-info">
             <p>경기도 화성시 반송동 3-10</p>
-            <p>연락처: <a href="tel:010-8695-7013">010-8695-7013</a></p>
+            <p>연락처: <a href="tel:010-4650-7013">010-4650-7013</a></p>
             <p>이메일: <a href="mailto:designjig.office@gmail.com">designjig.office@gmail.com</a></p>
         </div>
         <div class="footer-sns">
@@ -623,7 +623,8 @@
                 </svg>
             </a>
         </div>
-        <p class="footer-copyright">Copyright Rimdesign interior. All Right Reserved.</p>
+        <p class="footer-copyright"><a href="guide.html" style="color: inherit; text-decoration: none;">Copyright
+                Rimdesign interior. All Right Reserved.</a></p>
     </footer>
 
     <!-- 커스텀 성공 모달 -->
