feat: remove .html from guide URL and enable cleanUrls

--- a/index.html
+++ b/index.html
@@ -1430,8 +1430,8 @@
                 </svg>
             </a>
         </div>
-        <p class="footer-copyright"><a href="guide.html" style="color: inherit; text-decoration: none;">Copyright
-                Rimdesign interior. All Right Reserved.</a></p>
+        <p class="footer-copyright"><a href="/guide" style="color: inherit; text-decoration: none;">Copyright Design
+                Jig. All Rights Reserved.</a></p>
     </footer>
 
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
