--- a/portfolio.html
+++ b/portfolio.html
@@ -805,8 +805,8 @@
                     </svg>
                 </a>
             </div>
-            <p class="footer-copyright"><a href="guide.html" style="color: inherit; text-decoration: none;">Copyright
-                    Rimdesign interior. All Right Reserved.</a></p>
+            <p class="footer-copyright"><a href="/guide" style="color: inherit; text-decoration: none;">Copyright Design
+                    Jig. All Rights Reserved.</a></p>
         </footer>
     </div>
 
@@ -846,8 +846,8 @@
                 </svg>
             </a>
         </div>
-        <p class="footer-copyright"><a href="guide.html" style="color: inherit; text-decoration: none;">Copyright
-                Rimdesign interior. All Right Reserved.</a></p>
+        <p class="footer-copyright"><a href="/guide" style="color: inherit; text-decoration: none;">Copyright Design
+                Jig. All Rights Reserved.</a></p>
     </footer>
 
     <script>
